[gd_scene load_steps=2 format=3 uid="uid://brpckgp7j86jp"]

[ext_resource type="Script" uid="uid://dyep7jkkv3xtd" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Sky Lock Assault"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
